--- a/client/package.json
+++ b/client/package.json
@@ -11,14 +11,18 @@
     "preview": "cross-env NODE_ENV=production node server"
   },
   "dependencies": {
+    "@heroicons/react": "^2.0.17",
     "compression": "^1.7.4",
     "express": "^4.18.2",
+    "h3": "^1.6.4",
+    "listhen": "^1.0.4",
     "lodash": "^4.17.21",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-router-dom": "^6.10.0",
     "sirv": "^2.0.2",
-    "swiper": "^9.2.3",
-    "@heroicons/react": "^2.0.17"
+    "styled-components": "^5.3.10",
+    "swiper": "^9.2.3"
   },
   "devDependencies": {
     "@types/express": "^4.17.16",
@@ -27,6 +31,7 @@
     "@types/react": "^18.0.26",
     "@types/react-dom": "^18.0.9",
     "@types/react-slick": "^0.23.10",
+    "@types/styled-components": "^5.1.26",
     "@vitejs/plugin-react": "^3.0.1",
     "autoprefixer": "^10.4.14",
     "cross-env": "^7.0.3",
